--- a/PortfolioStyle.css
+++ b/PortfolioStyle.css
@@ -14,7 +14,20 @@
 body {
 	font-size: 62.5%;
 	font-family: "Josefin Sans";
+	font-weight: 100;
+	background-color: #FCF7F8;
 }
+/* Colours
+
+Background: #FCF7F8 (Pinky White)
+Borders: #CED3DC (Grey)
+Black ish: #000500
+Hover color: #ABA9C3 (Lilac)
+Accents: #88292F (Red)
+
+*/
+
+
 
 /*Text*/
 
@@ -24,6 +37,9 @@ h1 {
 
 h2 {
 	font-size: 2rem;
+	text-align: center;
+	font-weight: 200;
+	padding: 20px 0 0 0;
 }
 
 h3 {
@@ -32,35 +48,41 @@ h3 {
 
 h4 {
 	font-size: 1rem;
-	font-weight: 400;
+	font-weight: 200;
 }
 h6 {
-	font-size: 0.5rem;
+	font-size: 0.9rem;
+	padding: 20px;
+	font-weight: 100;
 }
 
 p {
-	font-size: 1rem;
+	font-size: 1.2rem;
+	text-align: center;
 }
 
 
 /*Nav Bar*/
 
 nav {
+	overflow: hidden;
 	position:fixed;
+	top: 0;
+	width: 100%;
 	margin: 0;
 	font-size: 1.5rem;
+	background-color: #FCF7F8;
 }
 
 li {
 	float: left;	
 	list-style-type: none;
+	padding: 0 0 20px 0;
 
 }
 
 li a {
-	display: inline-block;
 	padding: 8px;
-	background-color: #FCF7F8;
 	text-decoration: none;
 	color: #000500;
 	border-right: 1px solid #000500;
@@ -80,10 +102,112 @@ li a:hover {
 	justify-content: space-between;
 	flex-wrap: wrap;
 	align-items: center;
-	background-color: #FCF7F8;
 	padding: 20px;
 }
 
+
+
 .box {
-	border: 1px solid red;
+	text-align: center;
+	width: 30%;
+	border: 1px solid #CED3DC;
 }
+
+.medbox {
+	text-align: center;
+	width: 40%;
+	
+}
+
+.box img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  height: 25vh;
+}
+
+
+.aboutme img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    border-radius: 8px;
+    padding:10px;
+    border: 1px solid #CED3DC;
+}
+
+.portfolio,
+.contact .container {
+	background-color: #ABA9C3;
+}
+
+
+.contact .container {
+	height: 50vh;
+}
+
+
+.contactinfo a {
+	text-decoration: none;
+	color: #88292F;
+}
+
+
+
+
+
+
+/* Social Buttons */
+
+ /* Style all font awesome icons */
+.fa {
+ 	padding: 20px;
+  	font-size: 1rem;
+  	width: 50px;
+  	text-align: center;
+  	text-decoration: none;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+ 	 opacity: 0.7;
+}
+
+/* Set a specific color for each brand */
+
+
+.fa-twitter {
+	background: #55ACEE;
+	color: white;
+}
+
+
+.fa-linkedin {
+ 	 background: #007bb5;
+  	color: white;
+} 
+
+.fa-github {
+ 	background: #24292e;
+  	color: white;
+} 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
