--- a/PortfolioStyle.css
+++ b/PortfolioStyle.css
@@ -67,6 +67,7 @@ p {
 nav {
 	overflow: hidden;
 	position:fixed;
+	display: flex;
 	top: 0;
 	width: 100%;
 	margin: 0;
@@ -75,7 +76,7 @@ nav {
 }
 
 li {
-	float: left;	
+	display: inline;
 	list-style-type: none;
 	padding: 0 0 20px 0;
 
@@ -120,11 +121,12 @@ li a:hover {
 }
 
 .box img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  height: 25vh;
+  	display: block;
+  	margin-left: auto;
+  	margin-right: auto;
+  	width: 100%;
+  	height: 25vh;
+  	background-color: #CED3DC;
 }
 
 
@@ -180,7 +182,7 @@ footer {
 
 
 .fa-linkedin {
- 	 background: #007bb5;
+ 	background: #007bb5;
   	color: white;
 } 
 
