--- a/PortfolioStyle.css
+++ b/PortfolioStyle.css
@@ -120,7 +120,9 @@ li a:hover {
 	padding: 20px 20px;
 }
 
-
+.intropage .container {
+	height: 100vh;
+}
 
 .box {
 	text-align: center;
@@ -128,6 +130,7 @@ li a:hover {
 	height: 45%;
 	box-shadow: 0 5px 5px -5px #000500;
 	background-color: #edeef2;
+	overflow: hidden;
 }
 
 .medbox {
@@ -169,6 +172,13 @@ footer {
 	background-color: #ABA9C3;
 }
 
+.container.project {
+	overflow: scroll;
+	object-fit: cover;
+	width: 100vw;
+	height: auto;
+}
+
 
 footer {	
 	text-align: center;
@@ -179,6 +189,8 @@ footer {
 .social {
 	margin: 10px;
 }
+
+
 
 
 
@@ -254,7 +266,9 @@ footer {
 		font-size: 1rem;
 	}
 	
-	
+	.project.container {
+		width: 100vw;
+	}
 
 	
 }
