--- a/PortfolioStyle.css
+++ b/PortfolioStyle.css
@@ -38,7 +38,7 @@ Accents: #88292F (Red)
 /*Text*/
 
 h1 {
-	font-size: 5rem;
+	font-size: 4rem;
 	font-family: "Josefin Sans";
 	padding: 0 0 0 20px;
 }
@@ -77,6 +77,7 @@ nav {
 	overflow: hidden;
 	position:fixed;
 	display: flex;
+	justify-content: center;
 	top: 0;
 	width: 100%;
 	margin: 0;
@@ -85,11 +86,10 @@ nav {
 	background-color: #edeef2;
 }
 
+
 li {
 	display: inline;
 	list-style-type: none;
-	padding: 0 0 20px 0;
-
 }
 
 li a {
@@ -97,10 +97,16 @@ li a {
 	text-decoration: none;
 	color: #000500;
 	border-right: 1px solid #000500;
+	margin-: 0;
 }
 
+.lastnav a {
+	border-right: none;
+}
+
+
 li a:hover {
-	background-color: #ABA9C3;
+	text-shadow: 2px 2px 5px #ABA9C3;
 }
 
 
@@ -301,16 +307,56 @@ footer {
 
 
 
+/* Spinner */
+
+@keyframes spin {
+  0%, 100% {
+	  transform: rotate(none);
+  }
+  50% {
+	  transform: rotate(180deg);
+  }
+ 
+}
+
+
+
+.spinner {
+	display: inline-block;
+	width: 4rem;
+	height: 4rem;
+	background-color: #000500;
+	color: white;
+	margin: 2px;
+	animation: spin 3s 2;
+}
 
 
 
 
 
+/* 
 
+15% {transform: rotate(45deg);
 
+}
+30% {transform: rotate(90deg);
 
+}
+45% {transform: rotate(135deg);
 
+}
+60% {transform: rotate(180deg);
 
+}
+75% {transform: rotate(225deg);
+
+}
+90% {transform: rotate(270deg);
+
+}
+
+*/
 
 /*  In case you bring back dedicated Contact section
 
