--- a/indexstyle.css
+++ b/indexstyle.css
@@ -39,8 +39,6 @@ h1 {
 	font-size: 5rem;
 	font-family: "Josefin Sans";
 	padding: 0 0 0 20px;
-	position: relative;
-	top: 40%;
 }
 
 h2 {
@@ -118,6 +116,7 @@ li a:hover {
 
 .intropage .container {
 	height: 100vh;
+	align-items: center;
 }
 
 .projectbox {
