spinner working, text wrapping in h1

--- a/indexstyle.css
+++ b/indexstyle.css
@@ -3,7 +3,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,400;1,100;1,200&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Hind+Guntur:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&display=swap');
 	
 /*General CSS - normalize file contains most of it */
 	
@@ -15,22 +15,11 @@
 
 body {
 	font-size: 62.5%;
-	font-family: "Hind Guntur";
-	font-weight: 300;
+	font-family: "Montserrat", Helvetica;
+	font-weight: 200;
 	color: #000500;
 	background-color: #edeef2;
 }
-/* Colours
-
-Background: #edeef2 ( White)
-Borders: #CED3DC (Grey)
-Black ish: #000500
-
-
-Hover color: #ABA9C3 (Lilac)
-Accents: #88292F (Red)
-
-*/
 
 
 /*Text*/
@@ -38,34 +27,40 @@ Accents: #88292F (Red)
 h1 {
 	font-size: 4rem;
 	font-family: "Josefin Sans";
+	color: #edeef2;
 	padding: 0 0 0 20px;
 }
 
 h2 {
 	font-size: 2rem;
+	font-family: "Josefin Sans";
 	text-align: center;
-	font-weight: 200;
-	padding: 50px 0 0 0;
+	padding: 30px 0 0 0;
+	margin: 0;
 }
 
 h3 {
 	font-size: 1.5rem;
+	font-weight: 300;
 }
 
 h4 {
-	font-size: 1rem;
-	font-weight: 200;
+	font-size: 0.9rem;
+	margin: 10px 20px;
+	font-weight: 400;
 }
+
 h6 {
 	font-size: 0.9rem;
+	font-weight: 400;
 	padding: 20px 0 0 0;
-	font-weight: 100;
 	margin: 0;
 }
 
 p {
-	font-size: 1.2rem;
+	font-size: 1rem;
 	text-align: center;
+	margin: 0 20px;
 }
 
 /*Nav Bar*/
@@ -73,19 +68,21 @@ p {
 nav {
 	overflow: hidden;
 	position: fixed;
-	display: flex;
-	justify-content: center;
 	top: 0;
 	width: 100%;
 	margin: 0;
-	padding: 0 0 5px 0;
-	font-size: 1.5rem;
-	background-color: #edeef2;
+	font-size: 1.2rem;
+	background-image: linear-gradient(#ece6e5, #ffffff, #ece6e5);
+	opacity: 0.9;
 }
 
+ul {
+	display: flex;
+	justify-content: center;
+	padding: 0;
+}
 
 li {
-	display: inline;
 	list-style-type: none;
 }
 
@@ -94,16 +91,15 @@ li a {
 	text-decoration: none;
 	color: #000500;
 	border-right: 1px solid #000500;
-	margin-: 0;
+	margin: 0;
 }
 
 .lastnav a {
 	border-right: none;
 }
 
-
 li a:hover {
-	text-shadow: 2px 2px 5px #ABA9C3;
+	font-weight: 400;
 }
 
 
@@ -123,6 +119,8 @@ li a:hover {
 .intropage .container {
 	height: 100vh;
 	align-items: center;
+	background-image: url(handshake.jpg);
+	background-position: center top;
 }
 
 .projectbox {
@@ -144,7 +142,7 @@ li a:hover {
   	object-fit: cover;
 	width: 100%;
 	height: 200px;
-  	background-color: #CED3DC;
+  	background-color: #b0bfd5;
 }
 
 .projectinfo {
@@ -177,9 +175,17 @@ li a:hover {
 	background-position: center;
 }
 
+.aboutme p {
+	margin: 20px 10px;
+}
+
+.container.aboutmebackground {
+	align-items: center;
+}
+
 .portfolio,
 footer {
-	background-color: #ABA9C3;
+	background-color: #ece6e5;
 }
 
 .container.project {
@@ -274,7 +280,7 @@ footer {
 
 @media screen and (max-width: 380px) {	
 	nav li {
-		font-size: 0.8rem;
+		font-size: 0.7rem;
 	}	
 	footer {
 		box-shadow: none;
@@ -305,13 +311,15 @@ footer {
 	display: inline-block;
 	width: 4rem;
 	height: 4rem;
-	background-color: #000500;
-	color: white;
+	background-color: #edeef2;
+	color: #000500;
 	margin: 2px;
 	animation: spin 3s 2;
 }
 
-
+.nowrap {
+	white-space: nowrap;
+}
 
 
 
