--- a/indexstyle.css
+++ b/indexstyle.css
@@ -104,6 +104,36 @@ li a:hover {
 }
 
 
+
+/* Spinner */
+
+@keyframes spin {
+  0%, 100% {
+	  transform: rotate(none);
+  }
+  50% {
+	  transform: rotate(180deg);
+  }
+ 
+}
+
+
+
+.spinner {
+	display: inline-block;
+	width: 4rem;
+	height: 4rem;
+	background-color: #edeef2;
+	color: #000500;
+	margin: 2px;
+	animation: spin 3s 2;
+}
+
+.nowrap {
+	white-space: nowrap;
+}
+
+
 /*Body Styling*/
 
 .container {
@@ -211,19 +241,16 @@ footer {
 }
 
 
-
-
 /* Social Buttons */
 
  /* Style all font awesome icons */
  
-.fa {
- 	padding: 20px;
-  	font-size: 1rem;
-  	width: 50px;
+.fab {
+ 	padding: 10px;
+  	font-size: 2.5rem;
   	text-align: center;
   	text-decoration: none;
-	margin: 5px;
+	margin: 0 5px;
 }
 
 /* Add a hover effect */
@@ -249,15 +276,10 @@ footer {
   	color: #ffffff;
 } 
 
-
-
-
-
-
-
-
-
-
+.fa-dev {
+ 	background: #000500;
+  	color: #ffffff;
+} 
 
 
 
@@ -301,42 +323,23 @@ footer {
 	footer {
 		box-shadow: none;
 	}	
+	.intropage .container {
+		background-image: none;
+	}
+	h1 {
+		font-size: 4rem;
+		font-family: "Josefin Sans";
+		color: #000500;
+		padding: 0 0 0 20px;
+	}
+	.spinner {
+		display: inline-block;
+		width: 4rem;
+		height: 4rem;
+		background-color: #000500;
+		color: #edeef2;
+		margin: 2px;
+		animation: spin 3s 2;
+	}
 }
-
-
-
-
-
-
-
-/* Spinner */
-
-@keyframes spin {
-  0%, 100% {
-	  transform: rotate(none);
-  }
-  50% {
-	  transform: rotate(180deg);
-  }
- 
-}
-
-
-
-.spinner {
-	display: inline-block;
-	width: 4rem;
-	height: 4rem;
-	background-color: #edeef2;
-	color: #000500;
-	margin: 2px;
-	animation: spin 3s 2;
-}
-
-.nowrap {
-	white-space: nowrap;
-}
-
-
-
 
